--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -64,35 +64,35 @@ ext {
       //Dagger
       dagger                 : 'com.google.dagger:dagger:2.2',
       daggerCompiler         : 'com.google.dagger:dagger-compiler:2.2',
-      javaxAnnotations       : 'javax.annotation:jsr250-api:1.0',
-      javaxInject            : 'javax.inject:javax.inject:1',
-      autoFactoryCompiler    : 'com.google.auto.factory:auto-factory:1.0-beta3',
+      javaxAnnotations   : 'javax.annotation:jsr250-api:1.0',
+      javaxInject        : 'javax.inject:javax.inject:1',
+      autoFactoryCompiler: 'com.google.auto.factory:auto-factory:1.0-beta3',
 
       // Glide
-      glide                  : 'com.github.bumptech.glide:glide:3.7.0',
-      glideOkHttp            : 'com.github.bumptech.glide:okhttp3-integration:1.5.0@aar',
+      glide              : 'com.github.bumptech.glide:glide:3.7.0',
+      glideOkHttp        : 'com.github.bumptech.glide:okhttp3-integration:1.5.0@aar',
 
       //log4j
-      log4jLogging           : 'de.mindpipe.android:android-logging-log4j:1.0.3',
-      log4jAppache           : 'log4j:log4j:1.2.17',
+      log4jLogging       : 'de.mindpipe.android:android-logging-log4j:1.0.3',
+      log4jAppache       : 'log4j:log4j:1.2.17',
 
       //ESRI
-      esri                   : 'com.esri.arcgis.android:arcgis-android:10.2.8-1',
+      esri               : 'com.esri.arcgisruntime:arcgis-android:100.1.0',
 
       // Circular Progress
-      circularProgress       : 'com.github.rahatarmanahmed:circularprogressview:2.5.0',
+      circularProgress   : 'com.github.rahatarmanahmed:circularprogressview:2.5.0',
 
       // Color Picker
-      colorPicker            : 'com.thebluealliance:spectrum:0.7.1',
+      colorPicker        : 'com.thebluealliance:spectrum:0.7.1',
 
       // ImageViewZoom
-      imageViewZoom          : 'it.sephiroth.android.library.imagezoom:imagezoom:2.2.5',
+      imageViewZoom      : 'it.sephiroth.android.library.imagezoom:imagezoom:2.2.5',
 
       // Alerter
-      alerter                : 'com.tapadoo.android:alerter:1.0.6',
+      alerter            : 'com.tapadoo.android:alerter:1.0.6',
 
       // Compressor
-      compressor             : 'id.zelory:compressor:1.0.4',
+      compressor         : 'id.zelory:compressor:1.0.4',
 
       // Room
       room                   : "android.arch.persistence.room:runtime:${archVersion}",
